--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,2 +1,2 @@
 [start]
-cmd = "php artisan migrate --force && php artisan serve --host=0.0.0.0 --port=$PORT"
+cmd = "php artisan migrate --force -vvv && php artisan serve --host=0.0.0.0 --port=$PORT"
