--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
         "ext-gd": "*",
         "ext-intl": "*",
         "ext-zip": "*",
+        "ext-pdo_mysql": "*",
+        "ext-openssl": "*",
         "guzzlehttp/guzzle": "^7.10",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
